--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background: #EEE;
+    padding: 2.5em 5em;
+}
+
 a {
     cursor: pointer;
 }
